vscode/bds/server/src/grammar/bdsParser.ts
// Generated from server/src/grammar/bds.g4 by ANTLR 4.13.1
// noinspection ES6UnusedImports,JSUnusedGlobalSymbols,JSUnusedLocalSymbols

import {
	ATN,
	ATNDeserializer, DecisionState, DFA, FailedPredicateException,
	RecognitionException, NoViableAltException, BailErrorStrategy,
	Parser, ParserATNSimulator,
	RuleContext, ParserRuleContext, PredictionMode, PredictionContextCache,
	TerminalNode, RuleNode,
	Token, TokenStream,
	Interval, IntervalSet
} from 'antlr4';
import bdsListener from "./bdsListener.js";
// for running tests with parameters, TODO: discuss strategy for typed parameters in CI
// eslint-disable-next-line no-unused-vars
type int = number;

export default class bdsParser extends Parser {
	public static readonly T__0 = 1;
	public static readonly T__1 = 2;
	public static readonly T__2 = 3;
	public static readonly T__3 = 4;
	public static readonly T__4 = 5;
	public static readonly T__5 = 6;
	public static readonly T__6 = 7;
	public static readonly T__7 = 8;
	public static readonly T__8 = 9;
	public static readonly T__9 = 10;
	public static readonly T__10 = 11;
	public static readonly T__11 = 12;
	public static readonly T__12 = 13;
	public static readonly T__13 = 14;
	public static readonly T__14 = 15;
	public static readonly T__15 = 16;
	public static readonly T__16 = 17;
	public static readonly T__17 = 18;
	public static readonly T__18 = 19;
	public static readonly T__19 = 20;
	public static readonly T__20 = 21;
	public static readonly T__21 = 22;
	public static readonly T__22 = 23;
	public static readonly T__23 = 24;
	public static readonly T__24 = 25;
	public static readonly T__25 = 26;
	public static readonly T__26 = 27;
	public static readonly T__27 = 28;
	public static readonly T__28 = 29;
	public static readonly T__29 = 30;
	public static readonly T__30 = 31;
	public static readonly T__31 = 32;
	public static readonly T__32 = 33;
	public static readonly T__33 = 34;
	public static readonly T__34 = 35;
	public static readonly T__35 = 36;
	public static readonly T__36 = 37;
	public static readonly T__37 = 38;
	public static readonly T__38 = 39;
	public static readonly T__39 = 40;
	public static readonly T__40 = 41;
	public static readonly T__41 = 42;
	public static readonly T__42 = 43;
	public static readonly T__43 = 44;
	public static readonly T__44 = 45;
	public static readonly T__45 = 46;
	public static readonly T__46 = 47;
	public static readonly T__47 = 48;
	public static readonly T__48 = 49;
	public static readonly T__49 = 50;
	public static readonly T__50 = 51;
	public static readonly T__51 = 52;
	public static readonly T__52 = 53;
	public static readonly T__53 = 54;
	public static readonly T__54 = 55;
	public static readonly T__55 = 56;
	public static readonly T__56 = 57;
	public static readonly T__57 = 58;
	public static readonly T__58 = 59;
	public static readonly T__59 = 60;
	public static readonly T__60 = 61;
	public static readonly T__61 = 62;
	public static readonly T__62 = 63;
	public static readonly T__63 = 64;
	public static readonly T__64 = 65;
	public static readonly T__65 = 66;
	public static readonly T__66 = 67;
	public static readonly T__67 = 68;
	public static readonly T__68 = 69;
	public static readonly T__69 = 70;
	public static readonly T__70 = 71;
	public static readonly T__71 = 72;
	public static readonly T__72 = 73;
	public static readonly T__73 = 74;
	public static readonly T__74 = 75;
	public static readonly T__75 = 76;
	public static readonly T__76 = 77;
	public static readonly T__77 = 78;
	public static readonly T__78 = 79;
	public static readonly T__79 = 80;
	public static readonly NULL_LITERAL = 81;
	public static readonly BOOL_LITERAL = 82;
	public static readonly INT_LITERAL = 83;
	public static readonly REAL_LITERAL = 84;
	public static readonly STRING_LITERAL = 85;
	public static readonly STRING_LITERAL_SINGLE = 86;
	public static readonly HELP_LITERAL = 87;
	public static readonly SYS_LITERAL = 88;
	public static readonly TASK_LITERAL = 89;
	public static readonly COMMENT = 90;
	public static readonly COMMENT_LINE = 91;
	public static readonly COMMENT_LINE_HASH = 92;
	public static readonly ID = 93;
	public static readonly WS = 94;
	public static readonly EOF = Token.EOF;
	public static readonly RULE_programUnit = 0;
	public static readonly RULE_eol = 1;
	public static readonly RULE_includeFile = 2;
	public static readonly RULE_typeList = 3;
	public static readonly RULE_type = 4;
	public static readonly RULE_varDeclaration = 5;
	public static readonly RULE_variableInit = 6;
	public static readonly RULE_variableInitImplicit = 7;
	public static readonly RULE_functionDeclaration = 8;
	public static readonly RULE_field = 9;
	public static readonly RULE_classDef = 10;
	public static readonly RULE_statement = 11;
	public static readonly RULE_forInit = 12;
	public static readonly RULE_forCondition = 13;
	public static readonly RULE_forEnd = 14;
	public static readonly RULE_expression = 15;
	public static readonly RULE_expressionList = 16;
	public static readonly literalNames: (string | null)[] = [ null, "';'", 
                                                            "'\\n'", "'include'", 
                                                            "','", "'bool'", 
                                                            "'int'", "'real'", 
                                                            "'string'", 
                                                            "'void'", "'['", 
                                                            "']'", "'{'", 
                                                            "'}'", "'='", 
                                                            "':='", "'('", 
                                                            "')'", "'class'", 
                                                            "'extends'", 
                                                            "'break'", "'breakpoint'", 
                                                            "'checkpoint'", 
                                                            "'continue'", 
                                                            "'debug'", "'exit'", 
                                                            "'print'", "'println'", 
                                                            "'warning'", 
                                                            "'error'", "'try'", 
                                                            "'catch'", "'finally'", 
                                                            "'throw'", "'for'", 
                                                            "':'", "'if'", 
                                                            "'else'", "'kill'", 
                                                            "'return'", 
                                                            "'wait'", "'switch'", 
                                                            "'case'", "'default'", 
                                                            "'while'", "'.'", 
                                                            "'new'", "'++'", 
                                                            "'--'", "'~'", 
                                                            "'!'", "'*'", 
                                                            "'/'", "'%'", 
                                                            "'+'", "'-'", 
                                                            "'<'", "'<='", 
                                                            "'=='", "'!='", 
                                                            "'>='", "'>'", 
                                                            "'&'", "'|'", 
                                                            "'^'", "'&&'", 
                                                            "'||'", "'?'", 
                                                            "'<-'", "'=>'", 
                                                            "'task'", "'dep'", 
                                                            "'goal'", "'par'", 
                                                            "'parallel'", 
                                                            "'|='", "'&='", 
                                                            "'/='", "'*='", 
                                                            "'-='", "'+='", 
                                                            "'null'" ];
	public static readonly symbolicNames: (string | null)[] = [ null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, "NULL_LITERAL", 
                                                             "BOOL_LITERAL", 
                                                             "INT_LITERAL", 
                                                             "REAL_LITERAL", 
                                                             "STRING_LITERAL", 
                                                             "STRING_LITERAL_SINGLE", 
                                                             "HELP_LITERAL", 
                                                             "SYS_LITERAL", 
                                                             "TASK_LITERAL", 
                                                             "COMMENT", 
                                                             "COMMENT_LINE", 
                                                             "COMMENT_LINE_HASH", 
                                                             "ID", "WS" ];
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"programUnit", "eol", "includeFile", "typeList", "type", "varDeclaration", 
		"variableInit", "variableInitImplicit", "functionDeclaration", "field", 
		"classDef", "statement", "forInit", "forCondition", "forEnd", "expression", 
		"expressionList",
	];
	public get grammarFileName(): string { return "bds.g4"; }
	public get literalNames(): (string | null)[] { return bdsParser.literalNames; }
	public get symbolicNames(): (string | null)[] { return bdsParser.symbolicNames; }
	public get ruleNames(): string[] { return bdsParser.ruleNames; }
	public get serializedATN(): number[] { return bdsParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(this, bdsParser._ATN, bdsParser.DecisionsToDFA, new PredictionContextCache());
	}
	// @RuleVersion(0)
	public programUnit(): ProgramUnitContext {
		let localctx: ProgramUnitContext = new ProgramUnitContext(this, this._ctx, this.state);
		this.enterRule(localctx, 0, bdsParser.RULE_programUnit);
		let _la: number;
		try {
			let _alt: number;
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 37;
			this._errHandler.sync(this);
			_alt = this._interp.adaptivePredict(this._input, 0, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					{
					{
					this.state = 34;
					this.eol();
					}
					}
				}
				this.state = 39;
				this._errHandler.sync(this);
				_alt = this._interp.adaptivePredict(this._input, 0, this._ctx);
			}
			this.state = 41;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			do {
				{
				{
				this.state = 40;
				this.statement();
				}
				}
				this.state = 43;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			} while ((((_la) & ~0x1F) === 0 && ((1 << _la) & 2146768878) !== 0) || ((((_la - 33)) & ~0x1F) === 0 && ((1 << (_la - 33)) & 6547947) !== 0) || ((((_la - 70)) & ~0x1F) === 0 && ((1 << (_la - 70)) & 9435167) !== 0));
			this.state = 45;
			this.match(bdsParser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public eol(): EolContext {
		let localctx: EolContext = new EolContext(this, this._ctx, this.state);
		this.enterRule(localctx, 2, bdsParser.RULE_eol);
		let _la: number;
		try {
			let _alt: number;
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 48;
			this._errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					this.state = 47;
					_la = this._input.LA(1);
					if(!(_la===1 || _la===2)) {
					this._errHandler.recoverInline(this);
					}
					else {
						this._errHandler.reportMatch(this);
					    this.consume();
					}
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				this.state = 50;
				this._errHandler.sync(this);
				_alt = this._interp.adaptivePredict(this._input, 2, this._ctx);
			} while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public includeFile(): IncludeFileContext {
		let localctx: IncludeFileContext = new IncludeFileContext(this, this._ctx, this.state);
		this.enterRule(localctx, 4, bdsParser.RULE_includeFile);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 52;
			this.match(bdsParser.T__2);
			this.state = 53;
			_la = this._input.LA(1);
			if(!(_la===85 || _la===86)) {
			this._errHandler.recoverInline(this);
			}
			else {
				this._errHandler.reportMatch(this);
			    this.consume();
			}
			this.state = 54;
			this.eol();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public typeList(): TypeListContext {
		let localctx: TypeListContext = new TypeListContext(this, this._ctx, this.state);
		this.enterRule(localctx, 6, bdsParser.RULE_typeList);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 56;
			this.type_(0);
			this.state = 61;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===4) {
				{
				{
				this.state = 57;
				this.match(bdsParser.T__3);
				this.state = 58;
				this.type_(0);
				}
				}
				this.state = 63;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}

	public type_(): TypeContext;
	public type_(_p: number): TypeContext;
	// @RuleVersion(0)
	public type_(_p?: number): TypeContext {
		if (_p === undefined) {
			_p = 0;
		}

		let _parentctx: ParserRuleContext = this._ctx;
		let _parentState: number = this.state;
		let localctx: TypeContext = new TypeContext(this, this._ctx, _parentState);
		let _prevctx: TypeContext = localctx;
		let _startState: number = 8;
		this.enterRecursionRule(localctx, 8, bdsParser.RULE_type, _p);
		try {
			let _alt: number;
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 71;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case 5:
				{
				this.state = 65;
				this.match(bdsParser.T__4);
				}
				break;
			case 6:
				{
				this.state = 66;
				this.match(bdsParser.T__5);
				}
				break;
			case 7:
				{
				this.state = 67;
				this.match(bdsParser.T__6);
				}
				break;
			case 8:
				{
				this.state = 68;
				this.match(bdsParser.T__7);
				}
				break;
			case 9:
				{
				this.state = 69;
				this.match(bdsParser.T__8);
				}
				break;
			case 93:
				{
				this.state = 70;
				this.match(bdsParser.ID);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			this._ctx.stop = this._input.LT(-1);
			this.state = 86;
			this._errHandler.sync(this);
			_alt = this._interp.adaptivePredict(this._input, 6, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					if (this._parseListeners != null) {
						this.triggerExitRuleEvent();
					}
					_prevctx = localctx;
					{
					this.state = 84;
					this._errHandler.sync(this);
					switch ( this._interp.adaptivePredict(this._input, 5, this._ctx) ) {
					case 1:
						{
						localctx = new TypeContext(this, _parentctx, _parentState);
						this.pushNewRecursionContext(localctx, _startState, bdsParser.RULE_type);
						this.state = 73;
						if (!(this.precpred(this._ctx, 4))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 4)");
						}
						this.state = 74;
						this.match(bdsParser.T__9);
						this.state = 75;
						this.match(bdsParser.T__10);
						}
						break;
					case 2:
						{
						localctx = new TypeContext(this, _parentctx, _parentState);
						this.pushNewRecursionContext(localctx, _startState, bdsParser.RULE_type);
						this.state = 76;
						if (!(this.precpred(this._ctx, 3))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 3)");
						}
						this.state = 77;
						this.match(bdsParser.T__11);
						this.state = 78;
						this.match(bdsParser.T__12);
						}
						break;
					case 3:
						{
						localctx = new TypeContext(this, _parentctx, _parentState);
						this.pushNewRecursionContext(localctx, _startState, bdsParser.RULE_type);
						this.state = 79;
						if (!(this.precpred(this._ctx, 2))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 2)");
						}
						this.state = 80;
						this.match(bdsParser.T__11);
						this.state = 81;
						this.type_(0);
						this.state = 82;
						this.match(bdsParser.T__12);
						}
						break;
					}
					}
				}
				this.state = 88;
				this._errHandler.sync(this);
				_alt = this._interp.adaptivePredict(this._input, 6, this._ctx);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.unrollRecursionContexts(_parentctx);
		}
		return localctx;
	}
	// @RuleVersion(0)
	public varDeclaration(): VarDeclarationContext {
		let localctx: VarDeclarationContext = new VarDeclarationContext(this, this._ctx, this.state);
		this.enterRule(localctx, 10, bdsParser.RULE_varDeclaration);
		try {
			let _alt: number;
			this.state = 99;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 8, this._ctx) ) {
			case 1:
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 89;
				this.type_(0);
				this.state = 90;
				this.variableInit();
				this.state = 95;
				this._errHandler.sync(this);
				_alt = this._interp.adaptivePredict(this._input, 7, this._ctx);
				while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
					if (_alt === 1) {
						{
						{
						this.state = 91;
						this.match(bdsParser.T__3);
						this.state = 92;
						this.variableInit();
						}
						}
					}
					this.state = 97;
					this._errHandler.sync(this);
					_alt = this._interp.adaptivePredict(this._input, 7, this._ctx);
				}
				}
				break;
			case 2:
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 98;
				this.variableInitImplicit();
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public variableInit(): VariableInitContext {
		let localctx: VariableInitContext = new VariableInitContext(this, this._ctx, this.state);
		this.enterRule(localctx, 12, bdsParser.RULE_variableInit);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 101;
			this.match(bdsParser.ID);
			this.state = 104;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 9, this._ctx) ) {
			case 1:
				{
				this.state = 102;
				this.match(bdsParser.T__13);
				this.state = 103;
				this.expression(0);
				}
				break;
			}
			this.state = 107;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 10, this._ctx) ) {
			case 1:
				{
				this.state = 106;
				this.match(bdsParser.HELP_LITERAL);
				}
				break;
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public variableInitImplicit(): VariableInitImplicitContext {
		let localctx: VariableInitImplicitContext = new VariableInitImplicitContext(this, this._ctx, this.state);
		this.enterRule(localctx, 14, bdsParser.RULE_variableInitImplicit);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 109;
			this.match(bdsParser.ID);
			this.state = 110;
			this.match(bdsParser.T__14);
			this.state = 111;
			this.expression(0);
			this.state = 113;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 11, this._ctx) ) {
			case 1:
				{
				this.state = 112;
				this.match(bdsParser.HELP_LITERAL);
				}
				break;
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public functionDeclaration(): FunctionDeclarationContext {
		let localctx: FunctionDeclarationContext = new FunctionDeclarationContext(this, this._ctx, this.state);
		this.enterRule(localctx, 16, bdsParser.RULE_functionDeclaration);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 115;
			this.type_(0);
			this.state = 116;
			this.match(bdsParser.ID);
			this.state = 117;
			this.match(bdsParser.T__15);
			this.state = 119;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if ((((_la) & ~0x1F) === 0 && ((1 << _la) & 992) !== 0) || _la===93) {
				{
				this.state = 118;
				this.varDeclaration();
				}
			}

			this.state = 125;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===4) {
				{
				{
				this.state = 121;
				this.match(bdsParser.T__3);
				this.state = 122;
				this.varDeclaration();
				}
				}
				this.state = 127;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 128;
			this.match(bdsParser.T__16);
			this.state = 129;
			this.statement();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public field(): FieldContext {
		let localctx: FieldContext = new FieldContext(this, this._ctx, this.state);
		this.enterRule(localctx, 18, bdsParser.RULE_field);
		let _la: number;
		try {
			this.state = 145;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 16, this._ctx) ) {
			case 1:
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 131;
				this.varDeclaration();
				this.state = 135;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while (_la===1 || _la===2) {
					{
					{
					this.state = 132;
					this.eol();
					}
					}
					this.state = 137;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				}
				break;
			case 2:
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 138;
				this.functionDeclaration();
				this.state = 142;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while (_la===1 || _la===2) {
					{
					{
					this.state = 139;
					this.eol();
					}
					}
					this.state = 144;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public classDef(): ClassDefContext {
		let localctx: ClassDefContext = new ClassDefContext(this, this._ctx, this.state);
		this.enterRule(localctx, 20, bdsParser.RULE_classDef);
		let _la: number;
		try {
			let _alt: number;
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 147;
			this.match(bdsParser.T__17);
			this.state = 148;
			this.match(bdsParser.ID);
			this.state = 152;
			this._errHandler.sync(this);
			_alt = this._interp.adaptivePredict(this._input, 17, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					{
					{
					this.state = 149;
					this.eol();
					}
					}
				}
				this.state = 154;
				this._errHandler.sync(this);
				_alt = this._interp.adaptivePredict(this._input, 17, this._ctx);
			}
			this.state = 157;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===19) {
				{
				this.state = 155;
				this.match(bdsParser.T__18);
				this.state = 156;
				this.match(bdsParser.ID);
				}
			}
